# supreme-court-drafting-mcpb

./: .gitignore  .mcpbignore  DEPENDENCY_AUDIT.md  PRIVACY.md  README.md  SECURITY.md  manifest.json  pyproject.toml
SAMPLE-CASES/: README.md
SAMPLE-CASES/synthetic-slp-civil-partition-perversity/: 01-impugned-hc-second-appeal-judgment-2026-04-10.docx  02-trial-court-judgment-issue-3-extract.docx  case-facts-background.md
agents/drafter/: drafter.md
agents/format/: format.md
agents/overseer/: overseer.md
agents/reader/: reader.md
agents/refiner/: refiner.md
agents/verifier/: verifier.md
server/: main.py
skills/_drafting_common/: SKILL.md
skills/_sc_pleading_base/: FORMATTING.md  REFERENCE-DOCX-CUSTOMISATION.md  SKILL.md  reference.docx
skills/curative-petition-draft/: SKILL.md  format-from-user.md
skills/review-petition-draft/: SKILL.md  format-from-user.md
skills/slp-civil-draft/: SKILL.md  format-from-user.md
skills/slp-criminal-draft/: SKILL.md  format-from-user.md
skills/transfer-petition-draft/: SKILL.md  format-from-user.md
skills/writ-art32-draft/: SKILL.md  format-from-user.md
