[project]
name = "wolfgang-supreme-court-drafting"
version = "0.1.2"
description = "MCPB Desktop Extension for drafting pleadings before the Supreme Court of India."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Rushikesh R. Mahajan (wolfgang_rush)", email = "wolfgangrush@gmail.com" }
]
dependencies = [
    "mcp[cli]>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
